# quickvc

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  attentions.py  commons.py  convert.py  data_utils_new_new.py  losses.py  mel_processing.py  models.py  modules.py  pqmf.py  pyproject.toml  stft.py  train.py  transforms.py  utils.py
configs/: quickvc.json
dataset/: encode.py
src/quickvc/: wrapper.py
src/quickvc/cli/: convert.py  main.py  split.py
src/quickvc/cli/commands/: encode.py  infer.py  split.py  train.py
src/quickvc/modules/: attentions.py  models.py  modules.py  pqmf.py  stft.py
src/quickvc/training/: data_utils_new_new.py  encode.py  losses.py  stft_loss.py  train.py
src/quickvc/utils/: commons.py  mel_processing.py  timer.py  transforms.py  utils.py
